@@ -37,6 +37,7 @@ class TextSubtitle
 public:
 	TextSubtitle (boost::shared_ptr<const TextSubtitleContent>);
 
+	boost::optional<ContentTime> first () const;
 	ContentTime length () const;
 
 protected:
